--- a/src/html/partials/components/modal.html
+++ b/src/html/partials/components/modal.html
@@ -32,7 +32,7 @@
               type="text"
               placeholder=" "
               maxlength="63"
-              data-reg="^(?![.-])[A-Za-z0-9._-]+@[A-Za-z0-9.-]+\.[A-Z|a-z]{2,}$"
+              data-reg="^(?![.-])[A-Za-z0-9_]+(?<![.-])@[A-Za-z0-9]+(\.[A-Za-z]{2,}){1}(?<![.-])$"
             />
             <label class="form__label form__label--email" for="modal-email-book">Email*</label>
             <p class="form__error">Email is invalid</p>
