SD-4: on logo click function add

--- a/src/html/partials/components/nav-menu.html
+++ b/src/html/partials/components/nav-menu.html
@@ -1,6 +1,6 @@
 <nav class="nav">
   <div class="nav__logo">
-    <a href="/">
+    <a href="#" id="logo">
       <svg class="nav__logo-icon" width="72" height="22" aria-label="logo">
         <use href="./assets/images/sprite.svg#icon-logo-dent"></use>
       </svg>
