SD:35-bug-safari

--- a/src/html/partials/components/mobile-menu.html
+++ b/src/html/partials/components/mobile-menu.html
@@ -29,7 +29,7 @@
           <li class="nav__mobile-contacts-item">
             <div class="nav__mobile-icon-wrapper">
               <svg class="nav__mobile-icon" height="11" width="11" aria-label="phone">
-                <use href="./assets/images/sprite.svg#icon-phone"></use>
+                <use xlink:href="./assets/images/sprite.svg#icon-phone"></use>
               </svg>
             </div>
             <div class="nav__mobile-number-wrapper">
@@ -40,7 +40,7 @@
           <li class="nav__mobile-contacts-item">
             <div class="nav__mobile-icon-wrapper">
               <svg class="nav__mobile-icon" height="11" width="11" aria-label="address">
-                <use href="./assets/images/sprite.svg#icon-navigate"></use>
+                <use xlink:href="./assets/images/sprite.svg#icon-navigate"></use>
               </svg>
             </div>
             <div class="nav__mobile-address-wrapper">
