--- a/src/html/partials/components/nav-menu.html
+++ b/src/html/partials/components/nav-menu.html
@@ -2,7 +2,7 @@
   <div class="nav__logo">
     <a href="#" id="logo">
       <svg class="nav__logo-icon" width="72" height="22" aria-label="logo">
-        <use href="./assets/images/sprite.svg#icon-logo-dent"></use>
+        <use xlink:href="./assets/images/sprite.svg#icon-logo-dent"></use>
       </svg>
     </a>
   </div>
