--- a/src/html/partials/sections/hero.html
+++ b/src/html/partials/sections/hero.html
@@ -16,7 +16,7 @@
           <li class="hero__item">
             <div class="hero__icon-wrapper">
               <svg class="hero__icon" height="16" width="16" aria-label="phone">
-                <use href="./assets/images/sprite.svg#icon-phone"></use>
+                <use xlink:href="./assets/images/sprite.svg#icon-phone"></use>
               </svg>
             </div>
             <div class="hero__info-wrapper">
@@ -27,7 +27,7 @@
           <li class="hero__item">
             <div class="hero__icon-wrapper">
               <svg class="hero__icon" height="16" width="16" aria-label="address">
-                <use href="./assets/images/sprite.svg#icon-navigate"></use>
+                <use xlink:href="./assets/images/sprite.svg#icon-navigate"></use>
               </svg>
             </div>
             <div class="hero__info-wrapper">
@@ -41,7 +41,7 @@
         <div class="hero__schedule-block">
           <div class="hero__schedule-icon-wrapper">
             <svg class="hero__schedule-icon" height="11" width="11" aria-label="clock">
-              <use href="./assets/images/sprite.svg#icon-time"></use>
+              <use xlink:href="./assets/images/sprite.svg#icon-time"></use>
             </svg>
           </div>
           <div class="hero__schedule-wrapper">
