--- a/src/html/partials/sections/our_team.html
+++ b/src/html/partials/sections/our_team.html
@@ -6,12 +6,12 @@
     <div class="our-team__slider-wrapper">
       <button class="our-team__next slider__btn" aria-label="next slide">
         <svg class="our-team__next-icon" width="16" height="16">
-          <use href="./assets/images/sprite.svg#icon-arrow-right"></use>
+          <use xlink:href="./assets/images/sprite.svg#icon-arrow-right"></use>
         </svg>
       </button>
       <button class="our-team__prev slider__btn" aria-label="previous slide">
         <svg class="our-team__next-icon" width="16" height="16">
-          <use href="./assets/images/sprite.svg#icon-arrow-left"></use>
+          <use xlink:href="./assets/images/sprite.svg#icon-arrow-left"></use>
         </svg>
       </button>
       <div class="our-team__slider">
