--- a/src/assets/scss/layouts/_footer.scss
+++ b/src/assets/scss/layouts/_footer.scss
@@ -150,10 +150,11 @@
     flex-direction: row;
     justify-content: center;
     @include mq(tablet-only) {
-      flex-wrap: wrap;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-row-gap: 8px;
+      grid-column-gap: 8px;
       width: 80px;
-      gap: 8px;
-      align-items: center;
       margin: auto;
     }
     @include mq(desktop) {
