--- a/src/html/partials/components/modal.html
+++ b/src/html/partials/components/modal.html
@@ -31,8 +31,7 @@
               name="email"
               type="text"
               placeholder=" "
-              maxlength="63"
-              data-reg="^(?![.-])[A-Za-z0-9]+([A-Za-z0-9-]*[A-Za-z0-9])?@[A-Za-z0-9]+(\.[A-Za-z]{2,}){1}(?<![.-])$"
+              data-reg="^(?![.-])[A-Za-z0-9]+([A-Za-z0-9-]*[A-Za-z0-9])?@[A-Za-z0-9]+(\.[A-Za-z]{2,}){1}(?:[^.-]|$)$"
             />
             <label class="form__label form__label--email" for="modal-email-book">Email*</label>
             <p class="form__error">Email is invalid</p>
